# Vicky

./: .env.prod.example  .gitignore  CLAUDE.md  Dockerfile.prod  Makefile  compose.prod.yml  docker-compose.yml  pyproject.toml
LP Vicky/: Vicky LP v1.html  app-v2.js  app.js  index.html  styles-v2.css  styles.css
docs/: criterios-inclusao-exclusao.md  discovery-pipeline.md
resultados/completo/: 01_discordancias_dc.csv  02_excluidos_confirmados.csv  03_incertos.csv  04_incluidos.csv  dados_completos.json  decisoes.csv  stats.txt
resultados/teste-10/: dados.json  decisoes.csv  stats.txt
resultados/teste-60/: dados.json  decisoes.csv  stats.txt
resultados/top-40/: 01_TOP_40.csv  02_pool_completo_60.csv  03_excluidos_448.csv  dados_top40.json  relatorio_top40.md  stats.txt
scripts/: check_schema_drift.py  migrate_to_pg.py
src/vicky/: __init__.py  cli.py  config.py  db.py  discovery.py  llm.py  openrouter_cost.py  pdf_report.py  pipeline.py  pricing.py  prompts.py  report.py  schema_pg.sql  scraper.py  storage.py  xlsx_report.py
src/vicky/sources/: __init__.py  pubmed.py  scholar.py  scielo.py
src/vicky/web/: __init__.py  app.py  projects.py  queries.py  users.py  workspaces.py
src/vicky/web/static/: app.css
src/vicky/web/static/landing/: styles.css
src/vicky/web/templates/: app_layout.html  base.html  dashboard.html  landing.html  login.html  settings.html  signup.html  terms.html  workspace_settings.html
src/vicky/web/templates/admin/: reports.html
src/vicky/web/templates/api_usage/: detail.html  list.html
(+17 files in other folders)
